<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/title_welcome"
        android:text="@string/welcome_title"
        android:textStyle="bold"
        android:textSize="@dimen/title_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/margin_16"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/title_sign_up"
        android:text="@string/sign_up_title"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_welcome"
         />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/login_with_fb"
        android:id="@+id/login_withFacebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_sign_up"
        app:backgroundTint="@color/fb_color"
        app:icon="@android:drawable/star_on"
        app:iconGravity="end"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/login_with_email"
        android:id="@+id/login_withEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_withFacebook"
        app:backgroundTint="@color/fb_color"
        android:layout_marginBottom="@dimen/margin_16"

        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/create_new_acc"
        android:id="@+id/create_newAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_withEmail"
        app:backgroundTint="@color/teal_700"
        android:layout_marginBottom="@dimen/margin_16"
        />
</androidx.constraintlayout.widget.ConstraintLayout>