<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"     >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorSurface"
            app:statusBarScrim="?attr/colorSurface"
            app:collapsedTitleGravity="center"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false"
            app:toolbarId="@id/toolbar">


            <LinearLayout
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="?android:attr/actionBarSize"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/almost_there"
                    android:textColor="@color/fb_color"
                    android:textSize="@dimen/title_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newacc_disclaimer"
                    android:textColor="@color/fb_color" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mandatory"
                    android:textColor="@color/fb_color" />
            </LinearLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_detail_back"
                app:titleTextColor="?attr/colorOnSurface" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/new_account_detail_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/fab_bottom_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_normal">

            <TextView
                android:id="@+id/FirstNameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/FirstNameText" />

            <TextView
                android:id="@+id/LastNameText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstname" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LastNameText" />

            <TextView
                android:id="@+id/EmailText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastname" />

            <EditText
                android:id="@+id/emailaddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EmailText" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailaddress"
                android:weightSum="2">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dateofbirth_text_input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    >

                    <EditText
                        android:id="@+id/date_of_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:ems="10"
                        android:maxLines="1"
                        android:hint="@string/dob_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/genderswitch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textOn="Male"
                    android:textOff="Female"
                    app:showText="true"
                    android:thumb="@drawable/switch_thumb"
                    app:track="@drawable/switch_track"
                    android:layout_gravity="center_vertical"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <TextView
                android:id="@+id/nationalityText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nationality"
                android:textAlignment="textStart"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_horizontal" />

            <EditText
                android:id="@+id/nationality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/nationality"
                android:inputType="text"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nationalityText" />

            <TextView
                android:id="@+id/residenceText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/countryOfResidence"
                android:textAlignment="textStart"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nationality" />

            <EditText
                android:id="@+id/country_of_residence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/countryOfResidence"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/residenceText" />

            <TextView
                android:id="@+id/mobileNoText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mobileNumber"
                android:textAlignment="textStart"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/country_of_residence" />

            <EditText
                android:id="@+id/mobileNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:selectAllOnFocus="true"
                android:inputType="number"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobileNoText" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/create_my_acc"
                android:id="@+id/create_account_btn"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobileNumber"
                app:backgroundTint="@color/teal_700"
                android:layout_marginBottom="@dimen/margin_16"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        android:src="@drawable/guitar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>